@@ -15,6 +15,10 @@ For change history for MOST, see most/docs/CHANGES.
 Changes since 6.0b1
 -----------------
 
+10/19/16
+    - Improved robustness of infeasibility detection when 'pf.enforce_q_lims'
+      option is used.
+
 10/14/16
     - Fixed bugs in AC OPF solver code for fmincon, IPOPT, and Knitro
       involving shadow prices on variable bounds, when upper and lower bounds
